# claude-code-to-open-code-bridge

./: .gitignore  README.md  bridge.py  install.sh  mcp_server.py  pyproject.toml
examples/: claude-code.json  opencode.json
