[project]
name = "agent-bridge"
version = "1.0.0"
description = "Minimal agent coordination for Claude Code + OpenCode"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
keywords = ["mcp", "agent", "claude-code", "opencode", "coordination"]

dependencies = []  # Zero dependencies! Just Python stdlib

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
agent-bridge = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
